[package]
name = "ribosome"
version = "0.1.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.4.1"
clap = "2.33.0"
colored = "1.9.3"
serde = "1.0.104"